<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Stormy</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="error_title">Oops! Sorry!</string>
  <string name="error_message">There was an error. Please try again.</string>
  <string name="error_ok_button_text">OK</string>
  <string name="network_unavailable_message">Network is unavailable!</string>
  <string name="title_activity_daily_forecast">Daily Forecast Activity</string>
  <string name="no_daily_forecast_data">There is no data to display</string>
  <string name="hourly">Hourly</string>
  <string name="blank">--</string>
  <string name="ellipsis">…</string>
  <string name="location">Alcatraz Island, CA</string>
  <string name="humity">HUMIDITY</string>
  <string name="rain_snow">RAIN/SNOW?</string>
  <string name="getting_current_weather">Getting current weather…</string>
  <string name="title_activity_hourly_forecast">Hourly Forecast Activity</string>
  <string name="weekly">Weekly</string>
  <string name="this_weeks_weather">This Week\'s Weather</string>
  <string name="location_place_holder">Alcatraz Island, CA</string>
  <string name="daily">Daily</string>
  <string name="time_place_holder">12 PM</string>

</resources>
